Refactoring, add library data
